updated readme and updated to work on server

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "guides",
   "version": "0.1.0",
+  "homepage":"./docs",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
