--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clientinstall": "cd client && npm install",
     "start": "node server.js",
     "react": "npm start --prefix client",
     "server": "nodemon server.js",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/EricL132/Documentations#readme",
   "dependencies": {
     "concurrently": "^7.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
   }
